# spell-checker

./: .gitignore  README.md  ar-words.txt  arabic_spell_checker_fixed.py  main.py  pyproject.toml  requirements.txt
